--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,7 +7,7 @@
 }
 
 .sidebar {
-  @apply bg-lime-100 fixed top-0 left-0 right-0 bottom-0 transition transition-all duration-700 ease-in-out;
+  @apply bg-lime-100 dark:bg-lime-600 fixed top-0 left-0 right-0 bottom-0 transition transition-all duration-700 ease-in-out;
 }
 
 .sidebar-close {
